Add permanent kernel stage-attribution profiling suite (EC ~57% / hashing ~43%)
A re-runnable profiler that attributes kernel time across the per-key pipeline
(EC point gen -> uncompressed hash160 -> compressed hash160) with no new code
to write — read performance.md §6 and run one JMH command.

- Kernel: compile-time #ifdef PROFILE_SKIP_HASH160 / PROFILE_SKIP_SECOND_HASH160
  guards around the hash160 stages. Default build (no defines) is byte-for-byte
  the production kernel; the guards fill hash slots from X (EC stays live) or
  reuse the uncompressed hash, so the filter/output path is unchanged.
- Config: new KernelProfileStage enum (FULL/ONE_HASH160/NO_HASH160) +
  CProducerOpenCL.kernelProfileStage=FULL (diagnostic, default unchanged);
  OpenCLContext.buildOptions maps it to -D PROFILE_* defines.
- Benchmark: GpuFuse8FilterBenchmark gains a kernelProfileStage @Param ->
  one-run attribution sweep.
- Tests: buildOptions mapping (unit), CProducerOpenCL default+round-trip,
  and OpenCLContextTest.kernelProfileStage_buildsAndRuns (@OpenCLTest,
  @EnumSource) building+launching all three modes so the suite can't rot.
  ProbeAddressesOpenCLTest 43/0-fail (default path byte-identical).

Measured (RTX 3070, compact, kpwi=128, one back-to-back sweep): NO_HASH160
250.3 / ONE_HASH160 177.5 / FULL 143.4 ops/s -> EC 57%, hash160 #1 23.5%,
hash160 #2 19.2% (hashing 43%). Corrects the old ~30% hashing estimate
upward. Documented in §6 with how-to + interpretation; §2/§7/§8 updated
(adds the config-gated single-address mode as the cheapest large next win,
and reduced-radix field as the EC lever).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>